--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </html>
 <body>
-  <H1>Prueba</H1>
+  <div class="portada">
+    
+  </div>
 </body>
